hphp/hack/test/typecheck/test_erling.php.like_types.exp
File "test_erling.php", line 15, characters 7-8:
Invalid argument (Typing[4110])
File "test_erling.php", line 12, characters 14-22:
Expected ~Vector<A> because it is an unenforceable type
File "test_erling.php", line 14, characters 14-23:
But got Vector<?A>
